# benjamin

./: .env.example  .gitignore  BRAND.md  CLAUDE.md  Caddyfile  HANDOFF.md  README.md  ROADMAP.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 133a97a36408_initial_schema.py  37f0a9ee6093_add_peers_cache_to_stocks.py  8f2a1c9d4b6e_rename_checklist_to_strategy.py  a1b2c3d4e5f6_add_analyst_prompt_to_users.py  a3f6c8d2e1b5_add_asset_type_to_stocks.py  b2c3d4e5f6a7_add_positions_table.py  b7e4d1f9a6c2_add_last_backfill_attempt_at_to_stocks.py  c1d4e9a2f7b3_add_watchlist_display_order.py  c8d3a5f9b1e7_add_waitlist_entries.py  c9d3a5f7b1e4_add_last_quote_at_to_stocks.py  d1e6f2a8c4b9_add_fx_rates_and_preferred_currency.py  d4e8f6a2c9b7_add_last_fundamentals_attempt_at.py  d4f8b1c6e0a2_add_strategy_horizon.py  e2f7a4b9c1d3_add_more_fundamentals_metrics.py  e5a9c2d7f1b4_cascade_delete_evaluation_fks.py  e7f1b3c5d8a0_add_more_fundamentals_fields.py  f1a2b3c4d5e6_add_accepted_terms_at.py  f3c7b8e2a9d1_add_analyst_summary_to_users.py
backend/app/: config.py  database.py  main.py  scheduler.py  security.py  seed.py
backend/app/models/: stock.py  (+9 more)
backend/tests/: conftest.py  test_analyst.py  test_auth.py  test_backtest_core.py  test_checklists.py  test_core_logic.py  test_evaluations_api.py  test_fx.py  test_indicators.py  test_market_data.py  test_portfolio.py  test_rate_limit.py  test_scheduler_email.py  test_strategies.py  test_synthesis.py  test_waitlist.py  test_watchlist.py
(+75 files in other folders)
