[project]
name = "benjamin-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    "pandas==2.2.3",
    "httpx==0.28.1",
    "bcrypt==4.2.1",
    "pyjwt==2.10.1",
    "apscheduler==3.11.0",
    "aiosqlite==0.20.0",
]

[project.optional-dependencies]
test = ["pytest==8.3.4", "pytest-asyncio==0.24.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
